--- a/SolarSystem/SolarSystem.vcxproj
+++ b/SolarSystem/SolarSystem.vcxproj
@@ -121,18 +121,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Body.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Planet.cpp" />
+    <ClCompile Include="System.cpp" />
     <ClCompile Include="Vector2f.cpp" />
+    <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Planet.h" />
+    <ClInclude Include="Body.h" />
+    <ClInclude Include="System.h" />
     <ClInclude Include="Vector2f.h" />
+    <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="earth.jpg" />
     <Image Include="moon.jpg" />
     <Image Include="stars.jpg" />
+    <Image Include="sun.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
